<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="4" >

    <Button
        android:id="@+id/universityTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/university_size"
        android:textSize="12sp"
        android:onClick="ButtonOnClick"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/libraryTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libraryTab"
        android:textSize="12sp"
        android:onClick="ButtonOnClick"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/barTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barTab"
        android:textSize="12sp"
        android:onClick="ButtonOnClick"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/buildTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildTab"
        android:textSize="12sp"
        android:onClick="ButtonOnClick"
        android:layout_weight="1"/>

</LinearLayout>