<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uni3000.uni3000.view.university.UniversityActivity">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:id="@+id/linearLayout1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end"
            >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="100dp">

            </Space>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end"
            >

            <Button
                android:id="@+id/dormitoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_dormitoryButton"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end"
            >

            <Button
                android:id="@+id/recreationalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_recreationalButton"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end"
            >

            <Button
                android:id="@+id/educationalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_educationalButton"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end"
            >

            <Button
                android:id="@+id/landmarkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_landmarkButton"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end"
            >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="100dp">

            </Space>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:id="@+id/linearLayout2"
        android:layout_marginLeft="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start"
            >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="100dp">

            </Space>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:weightSum="1">

            <TextView
                android:id="@+id/dormatoryHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:ems="10"
                android:text="@string/build_dormitoryHint"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start"
            >

            <TextView
                android:id="@+id/recreationalHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:ems="10"
                android:text="@string/build_recreationalHint"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start"
            >

            <TextView
                android:id="@+id/educationalHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:ems="10"
                android:text="@string/build_educationalHint"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start"
            >

            <TextView
                android:id="@+id/landmarkHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:ems="10"
                android:text="@string/build_landmarkHint"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start"
            >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="100dp">

            </Space>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
</RelativeLayout>
