<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uni3000.uni3000.view.map.university.UniversityActivity">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:id="@+id/linearLayout1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end"
            >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="100dp">

            </Space>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end"
            >

            <Button
                android:id="@+id/recruitButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recruitButton1"
                android:textSize="12sp"
                android:onClick="ButtonOnClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end"
            >

            <Button
                android:id="@+id/recruitButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recruitButton2"
                android:textSize="12sp"
                android:onClick="ButtonOnClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end"
            >

            <Button
                android:id="@+id/educationalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recruitButton3"
                android:textSize="12sp"
                android:onClick="ButtonOnClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end"
            >

            <Button
                android:id="@+id/landmarkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recruitButton4"
                android:textSize="12sp"
                android:onClick="ButtonOnClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end"
            >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="100dp">

            </Space>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:id="@+id/linearLayout2"
        android:layout_marginLeft="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start"
            >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="100dp">

            </Space>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:weightSum="1">

            <TextView
                android:id="@+id/recruit1Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:ems="10"
                android:text="@string/build_recruitHint1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start"
            >

            <TextView
                android:id="@+id/recruit2Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:ems="10"
                android:text="@string/build_recruitHint2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start"
            >

            <TextView
                android:id="@+id/recruit3Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:ems="10"
                android:text="@string/build_recruitHint3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start"
            >

            <TextView
                android:id="@+id/recruit4Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:ems="10"
                android:text="@string/build_recruitHint4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start"
            >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="100dp">

            </Space>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
</RelativeLayout>
